@@ -31,7 +31,7 @@
 
 	* gcc.dg/tree-ssa/ssa-fre-84.c: New testcase.
 
-2019-12-12  Tobias Burnus  <tobias@codesourcery.com>
+2019-12-04  Tobias Burnus  <tobias@codesourcery.com>
 
 	PR fortran/92754
 	gfortran.dg/intrinsic_9.f90: New.
